--- a/index.html
+++ b/index.html
@@ -4,105 +4,115 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biography</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <table align="center" cellpadding="20" width="50%" bgColor="#BFAA8C">
-        <tr>
-            <td><h2>Biography</h2></td>
-            <td align="right"><h4><a href="#personalData">Personal data</a></h4></td>
-            <td align="right"><h4><a href="#skills">Skills</a></h4></td>
-            <td align="right"><h4><a href="#hobbies">Hobbies</a></h4></td>
-            <td align="right"><h4><a href="#contacts">Contacts</a></h4></td>
-            <td align="right"><h4><a href="#signUp">Sign Up</a></h4></td>
-        </tr>
-    </table>
-    <table align="center" cellpadding="20" width="50%" bgColor="#D1C0A8">
-        <tr>
-            <td colspan="1"><p>I am <strong>Auron Hajrullahu</strong>, 17 y/o and I live in the city of Gjilan. <br>
-                 I'm an aspiring Web Developer.</p></td>
-        </tr>
-    </table>
-    <table align="center" cellpadding="20" width="50%" bgColor="#E8DED1" id="personalData">
-        <tr>
-            <td colspan="5">
-                <h3>Personal Data</h3>
-                <hr>
-                <ul>
-                    <li>First Name: Auron</li>
-                    <li>Last Name: Hajrullahu</li>
-                    <li>Age: 17</li>
-                    <li>City: Gjilan</li>
-                </ul>
-            </td>
-        </tr>
-    </table>
-    <table align="center" cellpadding="20" width="50%" bgColor="#E8DED1" id="skills">
-        <tr>
-            <td colspan="5">
-                <h3>Skills</h3>
-                <hr>
-                <ul>
-                    <li>Programming(HTML,CSS,Javascript)</li>
-                    <li>English</li>
-                    <li>Math</li>
-                    <li>Instruments(Clarinet, Piano, Guitar)</li>
-                </ul>
-            </td>
-        </tr>
-    </table>
-    <table align="center" cellpadding="20" width="50%" bgColor="#E8DED1" id="hobbies">
-        <tr>
-            <td colspan="5">
-                <h3>Hobbies</h3>
-                <hr>
-                <ul>
-                    <li>Chess</li>
-                    <li>Movies and TV Series. Here are some of my favorites:</li>
-                    <img src="./img/gwh.jpg" alt="Good Will Hunting" width="150px">
-                    <img src="./img/theWire.jpg" alt="The Wire" width="150px">
-                    <img src="./img/theSopranos.jpg" alt="Good Will Hunting" width="150px">
-                    <li>Video Games</li>
-                    <li>Listening and Playing Music. Here are two of my favorite songs:</li>
-                    <h4>Kendrik Lamar: Money Trees</h4>
-                    <audio controls>
-                        <source src="./audio/kl.mp3" type="audio/mp3">
-                    </audio> 
-                    <h4>Kanye West: We Major</h4>
-                    <audio controls>
-                        <source src="./audio/kw.mp3" type="audio/mp3">
-                    </audio>
-                </ul>
-            </td>
-        </tr>
-    </table>
-    <table align="center" cellpadding="20" width="50%" bgColor="#E8DED1" id="contacts">
-        <tr>
-            <td colspan="5">
-                <h3>Contacts</h3>
-                <hr>
-                <ul>
-                    <li><img src="./img/ig.png" alt="IG" width="30">          __auronni__</li>
-                    <li><img src="./img/fb.png" alt="Fb" width="30">          auron.hajrullahu.75</li>
-                    <li><img src="./img/phone.jpg" alt="Phone" width="30">        +383 44 872 986</li>
-                    <li><img src="./img/add.png" alt="IAdd" width="30">        Rr."Esat Berisha", Gjilan</li>
-                    <li><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d887.8306673649286!2d21.471850555993804!3d42.46007583536597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1696779079515!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></li>
-                </ul>
-            </td>
-        </tr>
-    </table>
-    <table align="center" cellpadding="20" width="50%" bgColor="#E8DED1" id="signUp">
-        <tr>
-            <td colspan="5">
-                <h3>Sign Up</h3><hr><br>
-                <form action="">
-                    <input type="text" placeholder="Name" required><br><br>
-                    <input type="tel" placeholder="Mobile Number"><br><br>
-                    <input type="email" placeholder="Email" required><br><br>
-                    <input type="password" placeholder="Password" required><br><br>
-                    <button type="Submit">Sign up</button>
-                </form>
-            </td>
-        </tr>
-    </table>
+    <div class="container">
+        <table align="center" id="nav">
+            <tr>
+                <td><h2>Biography</h2></td>
+                <td align="right"><h4><a href="#personalData">Personal data</a></h4></td>
+                <td align="right"><h4><a href="#skills">Skills</a></h4></td>
+                <td align="right"><h4><a href="#hobbies">Hobbies</a></h4></td>
+                <td align="right"><h4><a href="#contacts">Contacts</a></h4></td>
+                <td align="right"><h4><a href="#signUp">Sign Up</a></h4></td>
+            </tr>
+        </table>
+        <table align="center" id="intro">
+            <tr>
+                <td><p>I am <strong>Auron Hajrullahu</strong>, I'm 17 y/o and I live in the city of Gjilan. <br>
+                     I'm an aspiring Web Developer.</p></td>
+            </tr>
+        </table>
+        <table align="center" id="personalData" class="content">
+            <tr>
+                <td>
+                    <h2 class="title">Personal Data</h2>
+                    <hr>
+                    <ul>
+                        <li>First Name: Auron</li>
+                        <li>Last Name: Hajrullahu</li>
+                        <li>Age: 17</li>
+                        <li>City: Gjilan</li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
+        <table align="center" id="skills" class="content">
+            <tr>
+                <td>
+                    <h2 class="title">Skills</h2>
+                    <hr>
+                    <ul>
+                        <li>Programming(HTML,CSS,Javascript)</li>
+                        <li>English</li>
+                        <li>Math</li>
+                        <li>Instruments(Clarinet, Piano, Guitar)</li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
+        <table align="center" id="hobbies" class="content">
+            <tr>
+                <td>
+                    <h2 class="title">Hobbies</h2>
+                    <hr>
+                    <ul>
+                        <li>Chess</li>
+                        <li>Movies and TV Series. Here are some of my favorites:</li>
+                        <img src="./img/gwh.jpg" alt="Good Will Hunting">
+                        <img src="./img/theWire.jpg" alt="The Wire">
+                        <img src="./img/theSopranos.jpg" alt="Good Will Hunting">
+                        <li>Video Games</li>
+                        <li>Listening and Playing Music. Here are two of my favorite songs:</li>
+                        <h4>Kendrik Lamar: Money Trees</h4>
+                        <audio controls>
+                            <source src="./audio/kl.mp3" type="audio/mp3">
+                        </audio>
+                        <h4>Kanye West: We Major</h4>
+                        <audio controls>
+                            <source src="./audio/kw.mp3" type="audio/mp3">
+                        </audio>
+                    </ul>
+                </td>
+            </tr>
+        </table>
+        <table align="center" id="contacts" class="content">
+            <tr>
+                <td colspan="2">
+                    <h2 class="title">Contacts</h2>
+                    <hr>
+                </td>
+            </tr>
+            <tr>
+                <td>
+        
+                    <ul>
+                        <li><img src="./img/ig.png" alt="IG" width="30">          __auronni__</li>
+                        <li><img src="./img/fb.png" alt="Fb" width="30">          auron.hajrullahu.75</li>
+                        <li><img src="./img/phone.png" alt="Phone" width="30">        +383 44 872 986</li>
+                        <li><img src="./img/add.png" alt="IAdd" width="30">        Rr."Esat Berisha", Gjilan</li>
+                    </ul>
+                </td>
+                <td>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d579.8571154166495!2d21.471675767344518!3d42.460233637584764!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13548d2c77923b69%3A0x6ad2f81a529d5e86!2sRuga%20Preshev%C3%AB%2C%20Gjilan!5e0!3m2!1sen!2sus!4v1697301319497!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </td>
+            </tr>
+        </table>
+        <table align="center" id="signUp" class="content">
+            <tr>
+                <td align="center">
+                    <h2 class="title">Sign Up</h2><hr><br>
+                    <form action="">
+                        <input type="text" placeholder="Name" required><br><br>
+                        <input type="tel" placeholder="Mobile Number"><br><br>
+                        <input type="email" placeholder="Email" required><br><br>
+                        <input type="password" placeholder="Password" required><br><br>
+                        <button type="Submit">Sign up</button>
+                    </form>
+                </td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
